fixed logo on small and medium devices

--- a/src/assets/css/layouts/phones/_mediumScreen.scss
+++ b/src/assets/css/layouts/phones/_mediumScreen.scss
@@ -2,6 +2,14 @@
 @media screen and (min-width: 360px) and (max-width: 375px) and (max-height: 667px) {
     body {
       background-color:yellow !important;
+      /* Home */
+      .home-page .home-admin-login {
+        margin-top: 0;
+        .orange-btn {
+          margin-top: 0;
+        }
+      }
+
       /* Schedules & Goalboard */
       .group-component {
         section {
@@ -55,7 +63,7 @@
             font-size: 1rem; 
           }
           img {
-            width: 20%;
+            width: 32%;
           }
         }
         .admin-btn {
