--- a/src/assets/css/layouts/phones/_smallScreen.scss
+++ b/src/assets/css/layouts/phones/_smallScreen.scss
@@ -2,6 +2,16 @@
 @media screen and (max-width:359px) {
     body {
       background-color:pink !important;
+      /* Home */
+      .home-page .home-logo img {
+        width: 45%;
+      }
+      .home-page .home-admin-login {
+        margin-top: 0;
+        .orange-btn {
+          margin-top: 0;
+        }
+      }
       /* Schedules & Goalboard */
       .schedules-page .container {
         height: 76vh;
@@ -115,7 +125,7 @@
             font-size: 1rem; 
           }
           img {
-            width: 20%;
+            width: 35%;
           }
         }
         .admin-btn {
